<resources>
    <string name="app_name">PayzanExecutive</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="spinner_title">category</string>
    <string name="password">Password</string>
    <string name="mobile_or_email">Mobile</string>
    <string name="login">Login</string>
    <string name="login_sname">"Login"</string>
    <string name="agentrequest_sname">"Agent Requests"</string>
    <string name="inprogressrequest_sname">"InProgress Requests"</string>
    <string name="approvedagents_sname">"Approved Agents"</string>
    <string name="userprofile_sname">"Profile"</string>
    <string name="bankdetail_sname">"Bank Details"</string>
    <string name="main_sname">"Home"</string>
    <string name="idproof_sname">"Id Proofs"</string>
    <string name="register_sname">"New Registration"</string>
    <string name="doc_sname">"Documents"</string>
    <string name="maps_api_key">AIzaSyCZo7vSHO8ceTd5rRCbq6XO95kEMq-1fHw</string>
    <string name="new_agent">New Agent</string>
    <string name="pic_agent">Pick/Hold Agent</string>
    <string name="agent_yet_to_verify">Agent Yet To Verify</string>
    <string name="in_progress">In Progress</string>
    <string name="approved_agents">Approved Agents</string>
    <string name="payzan_agent">Payzan Agent</string>
    <string name="agency_name">Agency Name</string>
    <string name="id_no">Id No</string>
    <string name="user_name">User Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_id">Email Id</string>
    <string name="dob_id">Date of Birth</string>
    <string name="provinance_name">Provinance Name</string>
    <string name="district_str">District Name</string>
    <string name="mandal_str">Mandal Name</string>
    <string name="village_str">village Name</string>
    <string name="address">Address</string>
    <string name="address_1">Address 1</string>
    <string name="no_internet">No Internet Connection</string>

    <string name="address_2">Address 2</string>
    <string name="land_mark">Land Mark</string>
    <string name="state">State</string>
    <string name="pin_code">Pin Code</string>
    <string name="postal_code">Postal Code</string>
    <string name="location_on_map">Location on Map</string>
    <string name="continue_btn">Continue</string>
    <string name="cancel_btn">Cancel</string>
    <string name="business_category">Business Category</string>
    <string name="Gender_category">Gender</string>
    <string name="title_type">Title Type</string>
    <string name="comment">Comments</string>
    <string name="pick_btn">Pick</string>
    <string name="personnal_btn">Personal</string>
    <string name="bank_btn">Bank</string>
    <string name="id_btn">Id Proof</string>
    <string name="doc_btn">Documents</string>
    <string name="add_btn">Add</string>
    <string name="convert_btn">Convert As Agent</string>
    <string name="hold_btn">Hold</string>
    <string name="review">Review</string>
    <string name="submit_btn">Submit</string>
    <string name="agent_name">Agent Name</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="lastmane_name">Last Name</string>
    <string name="logout_menu">Logout</string>
    <string name="agent_requests">Agent Requests</string>
    <string name="yet_to_go">Yet to go</string>
    <string name="un_verified">Un verified</string>
    <string name="verified">Verified</string>
    <string name="personal_identity_proof">Personal Identity Proof</string>
    <string name="financial_identity_proof">Financial Identity Proof</string>
   <!-- <string name="select_shift_code">Select Shift Code</string>-->
    <string name="select_shift_code"><font size="20">Select Shift Code</font></string>
    <string name="new_agent_registration">New Agent Registration</string>
    <string name="bank_details">Bank Details</string>
    <string name="comments_box"> Comments</string>
    <string name="no_records_found_please_try_another_keyword">No Records found. Please try another keyword</string>
    <string name="search_by_name">Search by name</string>
    <string name="aggrement_documents">Aggrement Documents</string>
    <string name="upload_documents">Upload Documents</string>
    <string name="currentDir">Current Directory</string>
    <string name="folder">Folder</string>
    <string name="fileSize">FileSize</string>
    <string name="parentDirectory">Parent Directory</string>
    <string name="status">Status :</string>
    <string name="assign_to">Assign To :</string>
    <string name="comment_str">Comment :</string>
    <string name="created_by">CreatedBy :</string>
    <string name="exit_from_the_app">Do you want to exit from the app?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="no_records_found">No Records found. Please try another keyword</string>
    <string name="add_documents">Add Documents</string>
    <string name="finish">Finish</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="account_number">Account Number</string>
    <string name="select_bank">Select Bank</string>
    <string name="select_branch">Select Branch</string>
    <string name="bank">Bank</string>
    <string name="number">Number</string>
    <string name="add">Add</string>
    <string name="branch">Branch</string>
    <string name="identity_proofs">Identity Proofs</string>
    <string name="catagory">Category</string>
    <string name="user_gmail_com">user@gmail.com</string>
    <string name="sign_out">Sign Out</string>
</resources>
