<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:background="@color/white"
android:layout_marginLeft="@dimen/lyt_margin_left"
android:layout_marginRight="@dimen/lyt_margin_right"
android:layout_marginBottom="@dimen/bottom_nav_height"
tools:context="calibrage.payzanagent.fragments.UserProfileHomeFragment">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:src="@drawable/user"
                android:id="@+id/profileImage"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/lyt_home_margin_top"
                android:orientation="vertical">

                <calibrage.payzanagent.controls.CommonTextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/user_name"
                    android:id="@+id/userName"/>

                <calibrage.payzanagent.controls.CommonTextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/mobile_number"
                    android:id="@+id/userMobile"/>
                <calibrage.payzanagent.controls.CommonTextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/user_gmail_com"
                    android:id="@+id/userMail"/>

            </LinearLayout>

        </LinearLayout>
    <calibrage.payzanagent.controls.CommonButton
        android:id="@+id/btn_sign_out"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/txt_height"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/lyt_margin_top"
        android:background="@drawable/roundbutton"
        android:text="@string/sign_out"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:textSize="@dimen/btn_FontSize" />
</LinearLayout>
</LinearLayout>

