<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/white"
tools:context="calibrage.payzanagent.fragments.AggrementDocumentsFragment">

    <LinearLayout
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:id="@+id/lyt_agenttransaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:weightSum="2">

            <android.support.v7.widget.CardView
                app:cardBackgroundColor="@color/btnPressedColor"
                android:layout_width="180dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:layout_margin="3dp"
                app:cardCornerRadius="0dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="226"
                        android:textSize="30dp"
                        android:layout_gravity="center_horizontal"/>
                    <TextView
                        android:textColor="@color/white"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Today Transactions"
                        />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                app:cardBackgroundColor="@color/new_blue"
                android:layout_width="180dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:layout_margin="3dp"
                app:cardCornerRadius="0dp"
                app:cardElevation="6dp"
                >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="11012"
                        android:textSize="30dp"
                        android:layout_gravity="center_horizontal"/>
                    <TextView
                        android:textColor="@color/white"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Money Collected"
                        />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"

            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:weightSum="2">

            <android.support.v7.widget.CardView
                app:cardBackgroundColor="@color/new_yellow"
                android:layout_width="180dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:layout_margin="3dp"
                app:cardCornerRadius="0dp"
                app:cardElevation="6dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="524"
                        android:textSize="30dp"
                        android:layout_gravity="center_horizontal"/>
                    <TextView
                        android:textColor="@color/white"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Today Commision"
                        />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                app:cardBackgroundColor="#FB4EDF6D"
                android:layout_width="180dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:layout_margin="3dp"
                app:cardCornerRadius="0dp"
                app:cardElevation="6dp"
                >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1929"
                        android:textSize="30dp"
                        android:layout_gravity="center_horizontal"/>
                    <TextView
                        android:textColor="@color/white"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Total Commision"
                        />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/lyt_margin_top"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/lyt_margin_top"
        android:layout_marginBottom="@dimen/lyt_margin_bottom">


        <calibrage.payzanagent.controls.CommonButton
            android:id="@+id/btn_newAgent"
            android:layout_width="1dp"
            android:layout_height="@dimen/txt_height"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/btn_margin_right"
            android:background="@drawable/roundbutton"
            android:text="@string/new_agent"
            android:textAllCaps="false"
            android:textColor="@color/White" />
        <calibrage.payzanagent.controls.CommonButton
            android:id="@+id/btn_agentRequests"
            android:layout_width="1dp"
            android:layout_height="@dimen/txt_height"
            android:layout_weight="1"
            android:background="@drawable/roundbutton"
            android:text="@string/pic_agent"
            android:textAllCaps="false"
            android:textColor="@color/White" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/lyt_margin_top">


        <calibrage.payzanagent.controls.CommonButton
            android:id="@+id/btn_yetToVerify"
            android:layout_width="1dp"
            android:layout_height="@dimen/txt_height"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/btn_margin_right"
            android:background="@drawable/roundbutton"
            android:text="@string/in_progress"
            android:textAllCaps="false"
            android:textColor="@color/White" />
        <calibrage.payzanagent.controls.CommonButton
            android:id="@+id/btn_approvedAgents"
            android:layout_width="1dp"
            android:layout_height="@dimen/txt_height"
            android:layout_weight="1"
            android:background="@drawable/roundbutton"
            android:text="@string/approved_agents"
            android:textAllCaps="false"
            android:textColor="@color/White" />

    </LinearLayout>
 <!--   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="100dp">


    <calibrage.payzanagent.controls.CommonButton
        android:id="@+id/btn_settings"
        android:layout_marginBottom="@dimen/lyt_margin_bottom"
        android:layout_width="250dp"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="@dimen/lyt_margin_top"
        android:background="@drawable/roundbutton"
        android:text="Settings"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:textSize="@dimen/btn_FontSize" />

    </LinearLayout>
-->
</LinearLayout>


</LinearLayout>
</LinearLayout>